Use lists instead of sets for type updates